@@ -457,7 +457,14 @@ void CParticleSystemSceneNode::doParticleSystem(u32 time)
 	{
 		// erase is pretty expensive!
 		if (now > Particles[i].endTime)
-			Particles.erase(i);
+		{
+			// Particle order does not seem to matter.
+			// So we can delete by switching with last particle and deleting that one.
+			// This is a lot faster and speed is very important here as the erase otherwise
+			// can cause noticable freezes.
+			Particles[i] = Particles[Particles.size()-1];
+			Particles.erase( Particles.size()-1 );
+		}
 		else
 		{
 			Particles[i].pos += (Particles[i].vector * scale);
@@ -491,6 +498,11 @@ void CParticleSystemSceneNode::setParticlesAreGlobal(bool global)
 	ParticlesAreGlobal = global;
 }
 
+//! Remove all currently visible particles
+void CParticleSystemSceneNode::clearParticles()
+{
+	Particles.set_used(0);
+}
 
 //! Sets the size of all particles.
 void CParticleSystemSceneNode::setParticleSize(const core::dimension2d<f32> &size)
